# wasfaty-pref-tests

./: .gitignore  Dockerfile  Makefile  README.md  fixtures_manager.py  locustfile.py  pyproject.toml  ruff.toml  s3.py  scope.json  settings.py  settings.yaml
data/: names.json  population-pyramid.csv
data/templates/: composition.json.jinja  condition.json.jinja  encounter.json.jinja  observation.json.jinja  organization.json.jinja  patient.json.jinja  practitioner.json.jinja
data/terminology/: occupation.json
scenarios/: Observation.py  __init__.py  synthea.py
scripts/: cache_generator.py  data_generate.py  insert_resources_batch.py  insert_resources_batch_async.py  synthea_cache_generator.py  synthea_insert_resources.py
source/: .gitignore
templates/: __init__.py
templates/insert/: bundle.entry.json.jinja  bundle.json.jinja  insert.json.jinja
util/: consts.py  engine.py  jwt_gen_token.py  ndjson_reader.py
util/generater/: config.py
util/helper/: helper.py  jinja_functions.py
util/logger/: logger.py
util/resources/: Composition.py  Condition.py  Encounter.py  Observation.py  Organization.py  Patient.py  Practitioner.py  Refs.py  Union.py
util/terminology/: resource.py  weights.py
